[package]
name = "gsm7-alt"
version = "0.1.0"
edition = "2024"
authors = ["Varelion"]
description = "GSM7 encoding and decoding by integer."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Varelion/gsm7-alt"
keywords = ["gsm", "encoding", "decoding", "sms"]

[dependencies]
once_cell = "1.19"
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gsm7_bench"
